# rust-tut

./: README.md  flake.nix
l1_basics/: .gitignore  00_hello_world.rs  10_variable.rs  11_constant.rs  12_variable.rs  13_variable.rs  20_function.rs  21_function.rs  22_function.rs  30_control_flow.rs  31_control_flow.rs  32_control_flow.rs  33_control_flow.rs  34_control_flow.rs  35_control_flow.rs  40_primitive.rs  41_primitive.rs  42_primitive.rs  43_vec.rs  44_vec.rs  50_lifetime.rs  50_ownership.rs  51_ownership.rs  Cargo.toml  README.md  generate_rust_analyzer.py
l1_basics/solutions/: 00_hello_world.rs  10_variable.rs  11_constant.rs  12_variable.rs  13_variable.rs  20_function.rs  21_function.rs  22_function.rs  30_control_flow.rs  31_control_flow.rs  32_control_flow.rs  33_control_flow.rs  34_control_flow.rs  35_control_flow.rs  40_primitive.rs  41_primitive.rs  42_primitive.rs  43_vec.rs  44_vec.rs  50_ownership.rs  51_ownership.rs  52_borrowing.rs
l1_basics/xtask/: Cargo.toml
l1_basics/xtask/src/: main.rs
l2_concurrency/: Cargo.toml  README.md  mandelbrot.nix
l2_concurrency/src/: main.rs
